external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifies_infix_no_abilities_postfix.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/ability_modifies_infix_no_abilities_postfix.move:4:28
  │
4 │     struct Foo has copy {} has;
  │                ---         ^^^ Duplicate ability declaration. Abilities can be declared before or after the field declarations, but not both.
  │                │            
  │                Ability declaration previously given here

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifies_infix_no_abilities_postfix.move:4:28
  │
4 │     struct Foo has copy {} has;
  │                            ^^^ Postfix abilities are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifies_infix_no_abilities_postfix.move:4:31
  │
4 │     struct Foo has copy {} has;
  │                               ^ Unexpected ';'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifies_infix_no_abilities_postfix.move:7:1
  │
7 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
